# bukan

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
src/: App.tsx  index.css  main.tsx  reorder.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app_data/: bukan.sqlite  config.toml
src-tauri/migrations/: 0001_initial.up.sql  0002_alter.up.sql
src-tauri/src/: config.rs  connection.rs  event.rs  events.rs  main.rs  models.rs  state.rs  storage.rs
src-tauri/src/db/: connection.rs  event.rs  migration.rs  mod.rs
src-tauri/src/models/: card.rs  column.rs  label.rs  mod.rs  project.rs  project_custom_property.rs  user.rs
src/components/: Board.tsx  Card.tsx  EditCard.tsx  Filter.tsx  FilterProject.tsx  FilterProjectOption.tsx  IButton.tsx  ICard.tsx  IColumn.tsx  Kanban.tsx  NewCard.tsx  NewCardByName.tsx  Settings.tsx  Sidebar.tsx  UserMenu.tsx  ViewCard.tsx
