[package]
name = "bukan"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
toml = "0.5.9"
serde_derive = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "windows7-compat"] }
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "sqlite"] }
tokio = { version = "1.21.2", features = ["full"] }
rand = "0.8.5"
dirs = "1.0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
